fixed navbar container on mobile

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -208,7 +208,7 @@ p {
     padding-left: 1.25rem;
     padding-right: 1.25rem;
     color: #303030;
-    // font-size: $font-size-body-larger;
+    font-size: 1.1rem;
 
     &:hover {
       color: $color-primary;
